--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Friendica Social Communications Server
+Him Friendica Social Communications Server
 ======================================
 
 http://friendica.com
